--- a/html/Linux/ubuntu常用命令.html
+++ b/html/Linux/ubuntu常用命令.html
@@ -1,1 +1,34 @@
-<h1>apt</h1>
+<h1>常用命令</h1>
+<h2>apt</h2>
+<h2>用户/用户组</h2>
+<ol>
+<li>
+<p>查看所有用户 <code>cat /etc/passwd</code></p>
+</li>
+<li>
+<p>查看所有用户组 <code>cat /etc/group</code></p>
+</li>
+<li>
+<p>添加用户 <code>sudo adduser or</code></p>
+</li>
+<li>
+<p><strong>将用户添加到 sudoers</strong></p>
+<blockquote>
+<p>sudo vim /etc/sudoers</p>
+</blockquote>
+<p><strong>修改文件如下：</strong></p>
+<blockquote>
+<p># User privilege specification<br>
+root ALL=(ALL) ALL<br>
+or ALL=(ALL) ALL</p>
+</blockquote>
+</li>
+</ol>
+<h2>查看所有服务端口 <code>cat /etc/services | less</code></h2>
+<h2>防火墙 <code>ufw</code></h2>
+<h2>文件</h2>
+<h3>权限 <code>chmod</code></h3>
+<h3>列举文件 <code>ls</code></h3>
+<h3>移动/复制/剪切 <code>mv</code></h3>
+<h3>删除 <code>rm</code></h3>
+<h3>解压缩 <code>rar</code></h3>
